src/test/deca/context/valid/ContextAvecObjet/DeclFields/publicFields.deca
// Description:
//    Déclaration de champs de visibilité public
//
// Resultats:
//    ok

class A {
    int x;
    float y = 1.0;
    boolean a;
}