src/test/deca/context/invalid/ContextSansObjet/OperationsArithmetiques/ModuloFloatInt.deca
//Description :
//	Vérification contextuelle de l'opérateur % avec pour entrée <float, int>
//
//Résultats :
//  Erreur contextuelle
//	ligne 9 : type incompatible

{
    int x = 1.0%3;
}